# lidar-odometry

./: .gitignore  .gitmodules  README.md  docker-compose.yaml  pixi.toml
evo_data/evo_glim_0/: evo_glim_0_0.mcap  metadata.yaml
evo_data/evo_glim_1/: evo_glim_1_0.mcap  metadata.yaml
evo_data/evo_glim_2/: evo_glim_2_0.mcap  metadata.yaml
evo_data/evo_kiss_0/: evo_kiss_0_0.mcap  metadata.yaml
evo_data/evo_kiss_2/: evo_kiss_2_0.mcap  metadata.yaml
evo_data/evo_kiss_3/: evo_kiss_3_0.mcap  metadata.yaml
lidarodom/: CMakeLists.txt  package.xml
lidarodom/config/: MID360_config.json  glim.rviz  kiss_icp.rviz  kiss_icp.yaml  livox_pointcloud.rviz
lidarodom/config/glim/: config.json  config_global_mapping_cpu.json  config_global_mapping_pose_graph.json  config_odometry_cpu.json  config_preprocess.json  config_ros.json  config_sensors.json  config_sub_mapping_cpu.json  config_sub_mapping_gpu.json
lidarodom/include/lidarodom/: glim_converter.hpp  kiss_converter.hpp  message_converter.hpp  params.hpp
lidarodom/launch/: foxglove.launch.py  glim.launch.py  kiss_icp.launch.py  kiss_icp_test.launch.py  livox.launch.py  livox_odometry.launch.py  odometry.launch.py
lidarodom/src/: glim_converter.cpp  kiss_converter.cpp  lidarodom.cpp  message_converter.cpp
rerun_bridge/: CMakeLists.txt  package.xml
rerun_bridge/config/: default_topics.yaml
rerun_bridge/include/rerun_bridge/: rerun_bridge_node.hpp
rerun_bridge/include/rerun_bridge/converters/: imu_converter.hpp  odometry_converter.hpp  path_converter.hpp  pointcloud_converter.hpp  pose_converter.hpp
rerun_bridge/launch/: rerun_bridge.launch.py
rerun_bridge/src/: rerun_bridge_node.cpp
rerun_bridge/src/converters/: imu_converter.cpp  odometry_converter.cpp  path_converter.cpp  pointcloud_converter.cpp  pose_converter.cpp
tmuxinator/: lidar_odometry.yml
