<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidarodom</name>
  <version>0.0.0</version>
  <description>LiDAR odometry with Livox</description>
  <maintainer email="alvgaona@gmail.com">Alvaro J. Gaona</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mocap4r2_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>rosbag2_storage_mcap</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>foxglove_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
